@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-06T08:19:29Z",
+  "timestamp" : "2022-07-07T01:39:41Z",
   "count_outdated" : 342,
   "uniques_outdated" : 217,
-  "count" : 369,
+  "count" : 370,
   "uniques" : 233,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
