@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 3,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
