@@ -1,3 +1,10 @@
+2022-07-07T01:39:41Z:
+* notice: last 14d: unq all: 3 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 342 / 233 369
+* notice: next accum: outdated-unq outdated-all / unq all: 217 342 / 233 370
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-06]
+
 2022-07-06T08:19:29Z:
 * notice: last 14d: unq all: 3 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 217 342 / 232 368
